# passport-verification

./: Dockerfile  README.md  Readme.txt  app.py  botsetup.sh  ip_address.crt  ip_address.key  passport_logic.py  pyproject.toml  ruff.toml
static/: index.html  script.js  styles.css
