[tool.poetry]
name = "image-recognition-backend"
version = "0.1.0"
description = ""
readme = "README.md"
authors = []
packages = [
    {include = "app"}
]

[tool.poetry.dependencies]
python = "3.11.9"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
python-multipart = "^0.0.9"
fastmrz = "^1.2"
opencv-python = "^4.10.0.84"
mrz = "^0.6.2"
easyocr = "^1.7.1"
tensorflow-macos = "^2.16.2"
tensorflow-metal = "^1.1.0"


[tool.poetry.group.development.dependencies]
pre-commit = "^3.7.1"
pytest = "^8.2.2"
ruff = "^0.6.0"
pytest-cov = "^5.0.0"
isort = "^5.13.2"
mypy = "^1.10.1"
pytest-env = "^1.1.3"
ruff-lsp = "^0.0.55"


[tool.mypy]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_unused_ignores = false
warn_return_any = false

namespace_packages = true
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
